SSB-178: Fixed filter dropdown gap

--- a/app/design/frontend/Alfakher/globalhookah/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_LayeredNavigation/web/css/source/_module.less
@@ -290,7 +290,6 @@
         }
 
         .filter-options-content {
-            margin: 0 0 @indent__m;
             overflow: auto;
             scrollbar-color: @button_color_secondary transparent;
             scrollbar-width: thin;
